--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="pt-md-5 pt-lg-5 col-md-8 col-lg-8 col-12 text-light text-center">
             <div class="h2">Hi, I am</div>
             <br>
-            <img src="media/images/my_picture.jpeg" alt="my image" style="height: 55vh; " class="align-center img-fluid rounded pb-1" >
+            <img src="/media/images/my_picture.jpeg" alt="my image" style="height: 55vh; " class="align-center img-fluid rounded pb-1" >
             <br>
             <div class="h1" style="font-size: 50px;">
                Ismail Muhammad
