--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="/css/bootstrap.css">
     <style>
         #nav-list-items:hover {
             text-decoration: underline;
@@ -28,7 +28,7 @@
                             <hr>
                             <div class="row">
                                 <div class="col-md-5 col-lg-5 col-sm-12">
-                                    <img src="../media/images/_sqr.jpeg" alt="my image" width="100%"
+                                    <img src="/media/images/_sqr.jpeg" alt="my image" width="100%"
                                         class="rounded img-fluid">
                                 </div>
                                 <div class="col-md-7 col-lg-7 col-sm-12 text-md-start text-lg-start text-sm-center">
