--- a/pages/recent_works.html
+++ b/pages/recent_works.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="/css/bootstrap.css">
     <style>
         #nav-list-items:hover {
             text-decoration: underline;
@@ -43,7 +43,7 @@
                                 </p>
                             </div>
                             <div class="col-md-5">
-                               <a target="_blank" href="../media/images/aym/Screenshot (1).png" style="text-decoration: none;"><img src="../media/images/aym/Screenshot (1).png" width="100%" alt=""></a>
+                               <a target="_blank" href="/media/images/aym/Screenshot (1).png" style="text-decoration: none;"><img src="../media/images/aym/Screenshot (1).png" width="100%" alt=""></a>
                             </div>
                         </div>
                         <hr class="featurette-divider">
@@ -60,8 +60,8 @@
                                 </p>
                             </div>
                             <div class="col-md-5">
-                                <a href="../media/images/peacock/Screenshot (12).png" target="_blank">
-                                    <img src="../media/images/peacock/Screenshot (12).png" width="100%" alt="">
+                                <a href="/media/images/peacock/Screenshot (12).png" target="_blank">
+                                    <img src="/media/images/peacock/Screenshot (12).png" width="100%" alt="">
                                 </a>
                             </div>
                         </div>
