--- a/pages/about.html
+++ b/pages/about.html
@@ -28,7 +28,7 @@
                             <hr>
                             <div class="row">
                                 <div class="col-md-5 col-lg-5 col-sm-12">
-                                    <img src="/media/images/_sqr.jpeg" alt="my image" width="100%"
+                                    <img src="/media/images/image_sqr.jpeg" alt="my image" width="100%"
                                         class="rounded img-fluid">
                                 </div>
                                 <div class="col-md-7 col-lg-7 col-sm-12 text-md-start text-lg-start text-sm-center">
