--- a/pages/what_i_do.html
+++ b/pages/what_i_do.html
@@ -11,7 +11,7 @@
             text-decoration: underline;
         }
     </style>
-    <title>Ismail Muhammad | ABOUT</title>
+    <title>Ismail Muhammad | WHAT I DO</title>
 </head>
 
 <body style="background-color: rgb(24, 21, 21)">
