--- a/pages/about.html
+++ b/pages/about.html
@@ -76,6 +76,9 @@
                                 <li>Desktop App Development</li>
                                 <li>Problem Solving</li>
                                 <li>Mobile Application development</li>
+                                <li>Flutter</li>
+                                <li>Python Programming</li>
+                                <li>HTML, CSS and JavaScript</li>
                             </ul>
                             <br>
                             <hr>
