--- a/pages/about.html
+++ b/pages/about.html
@@ -79,6 +79,7 @@
                                 <li>Flutter</li>
                                 <li>Python Programming</li>
                                 <li>HTML, CSS and JavaScript</li>
+                                <li>Search Engine Optimization</li>
                             </ul>
                             <br>
                             <hr>
