--- a/pages/contact.html
+++ b/pages/contact.html
@@ -60,7 +60,7 @@
                                     </div>
                                     <div class="col-md-6 col-lg-6 col-sm-12 fs-sm-4 text-end">
                                         <a style="font-size:medium;"
-                                            href="https://www.linkedin.com/in/ismail-muhammad-47b914211">@ismail-muhammad-47b914211</a>
+                                            href="https://www.linkedin.com/in/ismail-muhammad-lawan/">linkedin.com/in/ismail-muhammad-lawan/</a>
                                     </div>
                                 </div>
                                 <div class="row p-3">
