--- a/pages/about.html
+++ b/pages/about.html
@@ -20,30 +20,30 @@
             <div class="pt-md-5 pt-lg-5 col-md-8 col-lg-8 col-12 text-light text-center">
                 <div class="row g-5">
                     <div class="col-md-12">
-                        <h3 class="pb-4 mb-4 fst-italic border-bottom">
-                            Ismail Muhammad Lawan
-                        </h3>
+                        
                         <article class="blog-post">
-                            <h2 class="blog-post-title text-uppercase">Background</h2>
+                            <h2 class="blog-post-title text-uppercase">About Me</h2>
                             <hr>
                             <div class="row">
-                                <div class="col-md-5 col-lg-5 col-sm-12">
-                                    <img src="/media/images/image_sqr.jpeg" alt="my image" width="100%"
+                                <div class="col-12">
+                                    <img src="/media/images/image_sqr.jpeg" alt="my image" width="70%" height="50%" 
                                         class="rounded img-fluid">
                                 </div>
-                                <div class="col-md-7 col-lg-7 col-sm-12 text-md-start text-lg-start text-sm-center">
+                                
+                                <div class="col-12 pt-3 text-md-start text-lg-start text-sm-center">
                                     <p>
-                                        My name is Ismail Muhammad Lawan.
-                                        I was born in Kano State of Nigeria.
+                                        I started to enjoy playing around with computers at an early days.
+                                        I often ignored food while I am using the computers. Mostly doing nothing but playing games. But Later, I figured I could do more.
                                     </p>
                                     <p>
-                                        I started programming when I was in junior Secondary school.
-                                        I have worked as software developer for more that 5 years, both as a
-                                        freelancer and in a development team of a company.
+                                       During my early secondary school years, I figured I could also build those Applications and Games that fascinate me. I started to learn computer programming.
                                     </p>
                                     <p>
-                                        Through out my journey, I have completed more than 15 projects, which include
-                                        desktop applications, Android applications and web applications.
+                                        Since then, I have been building different types of softwares for diffrent kinds of people, some during my carear as a freelancer and some when I was a working as a software engineer in a company.
+                                    </p>
+                                    <p>
+                                        I have completed more than 15 projects, which include
+                                        desktop applications, Android applications and web applications. And I love what I do.
                                     </p>
                                 </div>
 
@@ -53,7 +53,7 @@
                             <h3>EDUCATION</h3>
                             <hr>
                             <ul class="text-start">
-                                <li class="border-top border-bottom p-2">
+                                <li class="border-top p-2">
                                     <h3 class="h3">
                                         Bayero University, Kano.
                                     </h3>
@@ -61,25 +61,35 @@
                                         B. Eng. Mechatronics Engineering.
                                     </div>
                                     <div>
-                                        Feb 2018 - Nov 2024.
+                                        Feb 2018 - To date.
+                                    </div>
+                                </li>
+                                <div class="p-2"></div>
+                                <li class="border-top border-bottom p-2">
+                                    <div class="p-2"></div>
+                                    <h3 class="h3">
+                                        Governor's College, Kano.
+                                    </h3>
+                                    <div class="fs-5">
+                                        Secondary School Certificate Examination.
+                                    </div>
+                                    <div>
+                                        2015 - 2018.
                                     </div>
                                 </li>
                             </ul>
                             <hr>
                             <br>
-                            <h3>
-                                SKILLS
+                            <h3 class="text-uppercase">
+                                Skills and Experiences
                             </h3>
                             <hr>
                             <ul class="text-start">
-                                <li>Web Design</li>
-                                <li>Desktop App Development</li>
-                                <li>Problem Solving</li>
+                                <li>Desktop Application Development</li>
                                 <li>Mobile Application development</li>
-                                <li>Flutter</li>
-                                <li>Python Programming</li>
-                                <li>HTML, CSS and JavaScript</li>
-                                <li>Search Engine Optimization</li>
+                                <li>Website Development</li>
+                                <li>Python programming</li>
+                                <li>Git And Github</li>
                             </ul>
                             <br>
                             <hr>
@@ -93,16 +103,16 @@
                 <div class="float-center">
                     <ul style="list-style: none; font-weight: 500;" class="text-center pb-2">
                         <li>
-                            <h2 class="h2 text-light">Quick links</h2>
+                            <h2 class="h2 text-light text-capitalize">Quick links</h2>
                         </li>
                         <li id="nav-list-items" class="pt-3 pt-md-3 pt-lg-3 "><a style="text-decoration: none;"
                                 href="/">HOME</a></li>
                         <li id="nav-list-items" class="pt-3 pt-md-3 pt-lg-3 "><a style="text-decoration: none;"
                                 href="/pages/about.html">ABOUT ME</a></li>
                         <li id="nav-list-items" class="pt-3 pt-md-3 pt-lg-3 "><a style="text-decoration: none;"
-                                href="/pages/what_i_do.html">WHAT I DO</a></li>
+                                href="/pages/what_i_do.html">SERVICES</a></li>
                         <li id="nav-list-items" class="pt-3 pt-md-3 pt-lg-3 "><a style="text-decoration: none;"
-                                href="/pages/recent_works.html">MY RECENT WORKS</a></li>
+                                href="/pages/recent_works.html">PORTFOLIO</a></li>
                         <li id="nav-list-items" class="pt-3 pt-md-3 pt-lg-3 "><a style="text-decoration: none;"
                                 href="/pages/contact.html">CONTACT INFO</a></li>
                     </ul>
