--- a/pages/recent_works.html
+++ b/pages/recent_works.html
@@ -97,16 +97,16 @@
                 <div class="float-center">
                     <ul style="list-style: none; font-weight: 500;" class="text-center pb-2">
                         <li>
-                            <h2 class="h2 text-light">Quick links</h2>
+                            <h2 class="h2 text-light text-capitalize">Quick links</h2>
                         </li>
                         <li id="nav-list-items" class="pt-3 pt-md-3 pt-lg-3 "><a style="text-decoration: none;"
                                 href="/">HOME</a></li>
                         <li id="nav-list-items" class="pt-3 pt-md-3 pt-lg-3 "><a style="text-decoration: none;"
                                 href="/pages/about.html">ABOUT ME</a></li>
                         <li id="nav-list-items" class="pt-3 pt-md-3 pt-lg-3 "><a style="text-decoration: none;"
-                                href="/pages/what_i_do.html">WHAT I DO</a></li>
+                                href="/pages/what_i_do.html">SERVICES</a></li>
                         <li id="nav-list-items" class="pt-3 pt-md-3 pt-lg-3 "><a style="text-decoration: none;"
-                                href="/pages/recent_works.html">RECENT PROJECTS</a></li>
+                                href="/pages/recent_works.html">PORTFOLIO</a></li>
                         <li id="nav-list-items" class="pt-3 pt-md-3 pt-lg-3 "><a style="text-decoration: none;"
                                 href="/pages/contact.html">CONTACT INFO</a></li>
                     </ul>
