--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="/css/bootstrap.css">
     <style>
         #nav-list-items:hover{
             text-decoration: underline;
@@ -32,11 +32,11 @@
         <div class="col-md-3 col-lg-3 col-sm-12 pt-md-5 pt-lg-5">
             <div class="float-center">
                 <ul style="list-style: none; font-weight: 500;" class="text-center pb-2">
-                    <li><h2 class="h2 text-light">Quick links</h2></li>
+                    <li><h2 class="h2 text-light text-capitalize">Quick links</h2></li>
                     <li id="nav-list-items" class="pt-3 pt-md-3 pt-lg-3 "><a style="text-decoration: none;" href="/">HOME</a></li>
                     <li id="nav-list-items" class="pt-3 pt-md-3 pt-lg-3 "><a style="text-decoration: none;" href="/pages/about.html">ABOUT ME</a></li>
-                    <li id="nav-list-items" class="pt-3 pt-md-3 pt-lg-3 "><a style="text-decoration: none;" href="/pages/what_i_do.html">WHAT I DO</a></li>
-                    <li id="nav-list-items" class="pt-3 pt-md-3 pt-lg-3 "><a style="text-decoration: none;" href="/pages/recent_works.html">RECENT PROJECTS</a></li>
+                    <li id="nav-list-items" class="pt-3 pt-md-3 pt-lg-3 "><a style="text-decoration: none;" href="/pages/what_i_do.html">SERVICES</a></li>
+                    <li id="nav-list-items" class="pt-3 pt-md-3 pt-lg-3 "><a style="text-decoration: none;" href="/pages/recent_works.html">PORTFOLIO</a></li>
                     <li id="nav-list-items" class="pt-3 pt-md-3 pt-lg-3 "><a style="text-decoration: none;" href="pages/contact.html">CONTACT INFO</a></li>
                 </ul>
             </div>
