--- a/pages/contact.html
+++ b/pages/contact.html
@@ -60,7 +60,7 @@
                                     </div>
                                     <div class="col-md-6 col-lg-6 col-sm-12 fs-sm-4 text-end">
                                         <a style="font-size:medium;"
-                                            href="https://www.linkedin.com/in/ismail-muhammad-lawan/">linkedin.com/in/ismail-muhammad-lawan/</a>
+                                            href="https://www.linkedin.com/in/ismail-muhammad-lawan/">@ismail-muhammad-lawan</a>
                                     </div>
                                 </div>
                                 <div class="row p-3">
@@ -127,16 +127,16 @@
                 <div class="float-center">
                     <ul style="list-style: none; font-weight: 500;" class="text-center pb-2">
                         <li>
-                            <h2 class="h2 text-light">Quick links</h2>
+                            <h2 class="h2 text-light text-capitalize">Quick Links</h2>
                         </li>
                         <li id="nav-list-items" class="pt-3 pt-md-3 pt-lg-3 "><a style="text-decoration: none;"
                                 href="/">HOME</a></li>
                         <li id="nav-list-items" class="pt-3 pt-md-3 pt-lg-3 "><a style="text-decoration: none;"
                                 href="/pages/about.html">ABOUT ME</a></li>
                         <li id="nav-list-items" class="pt-3 pt-md-3 pt-lg-3 "><a style="text-decoration: none;"
-                                href="/pages/what_i_do.html">WHAT I DO</a></li>
+                                href="/pages/what_i_do.html">SERVICES</a></li>
                         <li id="nav-list-items" class="pt-3 pt-md-3 pt-lg-3 "><a style="text-decoration: none;"
-                                href="/pages/recent_works.html">MY RECENT PROJECTS</a></li>
+                                href="/pages/recent_works.html">PORTFOLIO</a></li>
                         <li id="nav-list-items" class="pt-3 pt-md-3 pt-lg-3 "><a style="text-decoration: none;"
                                 href="/pages/contact.html">CONTACT INFO</a></li>
                     </ul>
