--- a/pages/what_i_do.html
+++ b/pages/what_i_do.html
@@ -20,15 +20,15 @@
             <div class="pt-md-5 pt-lg-5 col-md-8 col-lg-8 col-12 text-light text-center">
                 <div class="row g-5">
                     <div class="col-md-12">
-                        <h3 class="pb-4 mb-4 fst-italic text-capitalize border-bottom">
-                            What I do
+                        <h3 class="pb-4 mb-4 text-capitalize border-bottom">
+                            MY SERVICES
                         </h3>
                         <article class="blog-post">
-                            <h2 class="blog-post-title text-lg-start text-md-start text-sm-center text-uppercase">Mobile
+                            <h2 class="blog-post-title text-lg-start text-md-start text-sm-center text-capitalize">Mobile
                                 applications</h2>
                             <hr>
                             <div class="row">
-                                <div class="col-md-5 col-lg-5 col-sm-12">
+                                <div class="col-md-5 col-lg-5 col-sm-12 bg-white rounded">
                                     <img src="/media/images/mobile-application-development.png" alt="my image" width="100%"
                                         class="rounded img-fluid">
 
@@ -36,9 +36,7 @@
                                 <div
                                     class="col-md-8 col-lg-7 col-sm-12 pt-3 text-md-start text-lg-start text-sm-center">
                                     <p>
-                                        I develope Aplications for bothe Android and IOS devices. This can either be
-                                        offline applications or online applications. They can also be made so that they
-                                        work in both situations.
+                                        I develope Aplications for both Android and IOS devices that work both offline and online.
                                     </p>
                                     <p class="text-center pt-md-5 pt-lg-5 pt-sm-2">
                                         <a href="/pages/recent_works.html" class="btn btn-primary">View Some of My projects</a>
@@ -48,8 +46,8 @@
                             <hr>
                         </article>
                         <article class="blog-post">
-                            <h2 class="blog-post-title text-lg-start text-md-start text-sm-center text-uppercase">
-                                Computer/Desktop applications</h2>
+                            <h2 class="blog-post-title text-lg-start text-md-start text-sm-center text-capitalize">
+                                Computer applications</h2>
                             <hr>
                             <div class="row">
                                 <div class="col-md-5 col-lg-5 col-sm-12">
@@ -59,8 +57,7 @@
                                 <div
                                     class="col-md-7 col-lg-7 pt-3 col-sm-12 text-md-start text-lg-start text-sm-center">
                                     <p>
-                                        I build Applications the work on your PC. They can also be made to work with
-                                        internet connection of offline. Or if needed, they can work in both situations.
+                                        I can build Applications that will work on your PC either with internet connection or offline. 
                                     </p>
                                     <p class="text-center pt-md-5 pt-lg-5 pt-sm-2">
                                         <a href="/pages/recent_works.html" class="btn btn-primary">View Some of My projects</a>
@@ -70,7 +67,7 @@
                             <hr>
                         </article>
                         <article class="blog-post">
-                            <h2 class="blog-post-title text-lg-start text-md-start text-sm-center text-uppercase">
+                            <h2 class="blog-post-title text-lg-start text-md-start text-sm-center text-capitalize">
                                 Websites and Web applications</h2>
                             <hr>
                             <div class="row">
@@ -82,12 +79,10 @@
                                     class="col-md-7 pt-3 col-lg-7 col-sm-12 text-md-start text-lg-start text-sm-center">
                                     <p>
                                         These include personal websites, company websites, e-commerce webtites,
-                                        registration portals, analytics web apps and more.
-                                    </p>
-                                    <p>
-                                        Web apps and websites i build are always responsive, ie. they look good on both
+                                        registration portals, analytics web apps and more. These Wepsites work perfectly on both
                                         mobile, tablet and computer screens.
                                     </p>
+                                    
                                     <p class="text-center pt-md-5 pt-lg-5 pt-sm-2">
                                         <a href="/pages/recent_works.html" class="btn btn-primary">View Some of My projects</a>
                                     </p>
@@ -105,16 +100,16 @@
                 <div class="float-center">
                     <ul style="list-style: none; font-weight: 500;" class="text-center pb-2">
                         <li>
-                            <h2 class="h2 text-light">Quick links</h2>
+                            <h2 class="h2 text-light text-capitalize">Quick links</h2>
                         </li>
                         <li id="nav-list-items" class="pt-3 pt-md-3 pt-lg-3 "><a style="text-decoration: none;"
                                 href="/">HOME</a></li>
                         <li id="nav-list-items" class="pt-3 pt-md-3 pt-lg-3 "><a style="text-decoration: none;"
                                 href="/pages/about.html">ABOUT ME</a></li>
                         <li id="nav-list-items" class="pt-3 pt-md-3 pt-lg-3 "><a style="text-decoration: none;"
-                                href="/pages/what_i_do.html">WHAT I DO</a></li>
+                                href="/pages/what_i_do.html">SERVICES</a></li>
                         <li id="nav-list-items" class="pt-3 pt-md-3 pt-lg-3 "><a style="text-decoration: none;"
-                                href="/pages/recent_works.html">MY RECENT WORKS</a></li>
+                                href="/pages/recent_works.html">PORTFOLIO</a></li>
                         <li id="nav-list-items" class="pt-3 pt-md-3 pt-lg-3 "><a style="text-decoration: none;"
                                 href="/pages/contact.html">CONTACT INFO</a></li>
                     </ul>
